[package]
name = "safe_pump_mothership"
version = "4.0.0"
edition = "2021"
description = "Mothership WASM CDN — Full Dashboard (NO SPL, NO ANCHOR)"

[lib]
crate-type = [ "cdylib", "rlib",]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
indexmap = "2.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[dependencies.warp_core]
path = "../warp_core"

[dependencies.raydium-cp-swap]
path = "../warp_core/raydium-cp-swap/programs/cp-swap"

[dependencies.solana-sdk]
path = "./safe_pump/sdk"

[dependencies.web-sys]
version = "0.3"
features = [ "Window", "Crypto", "console", "Storage", "Location",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.getrandom]
version = "0.2"
features = [ "js",]
