[package]
name = "safe_pump_mothership"
version = "4.1.0"
edition = "2021"
description = "MOTHERSHIP v4.1 — ZK Rotator + SPMP Handshake + Vanity PDA"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
blstrs = { version = "0.2", features = ["wasm"] }
subtle = "2.5"
solana-sdk = { path = "./safe_pump/sdk" }
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.warp_core]
path = "../warp_core"

[dependencies.raydium-cp-swap]
path = "../warp_core/raydium-cp-swap/programs/cp-swap"

[features]
default = []
